# hextime-bash

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  Makefile.in  README.md  configure  configure.ac
data/: Makefile.am  Makefile.in  unix-leap-seconds.list
src/: Makefile.am  Makefile.in  hextime.pre.in
test/: Makefile.am  Makefile.in
test/hextime.tests/: basic.exp  dehex-hex.exp.in  help.exp  hex-dehex.exp.in  post-leap-dehex.exp  post-leap.exp  post-nonleap-dehex.exp  post-nonleap.exp  pre-leap-dehex.exp  pre-leap.exp  pre-nonleap-dehex.exp  pre-nonleap.exp  pre-unix-date-dehex.exp  pre-unix-date.exp  zero-dehex.exp  zero.exp
